[gd_scene load_steps=4 format=3 uid="uid://brihhvr3e0dtq"]

[ext_resource type="Script" uid="uid://dkhyyxjothkkv" path="res://game/player_field_1.gd" id="1_arifm"]
[ext_resource type="PackedScene" uid="uid://tdqkg32ia5t7" path="res://game/player.tscn" id="2_u3k4h"]
[ext_resource type="PackedScene" uid="uid://dmsxbcrsrvqkv" path="res://game/enemy.tscn" id="3_jrlup"]

[node name="PlayerField" type="Node2D"]
script = ExtResource("1_arifm")

[node name="Label" type="Label" parent="."]
offset_left = 466.0
offset_top = 470.0
offset_right = 550.0
offset_bottom = 493.0
text = "Not Ready"

[node name="Button" type="Button" parent="."]
offset_left = 346.0
offset_top = 544.0
offset_right = 463.0
offset_bottom = 575.0
text = "Ready"

[node name="Button2" type="Button" parent="."]
offset_left = 540.0
offset_top = 542.0
offset_right = 671.0
offset_bottom = 573.0
text = "Do Something"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 876.0
offset_top = 296.0
offset_right = 916.0
offset_bottom = 336.0

[node name="IDLabel" type="Label" parent="."]
offset_top = 623.0
offset_right = 40.0
offset_bottom = 646.0

[node name="LeaveButton" type="Button" parent="."]
offset_left = 1071.0
offset_top = 584.0
offset_right = 1124.0
offset_bottom = 615.0
text = "Leave"

[node name="MessageLabel" type="Label" parent="."]
offset_left = 439.0
offset_top = 608.0
offset_right = 479.0
offset_bottom = 631.0

[node name="Timer" type="Timer" parent="MessageLabel"]
wait_time = 1.2
one_shot = true

[node name="Player1" parent="." instance=ExtResource("2_u3k4h")]
position = Vector2(188, 458)

[node name="Player2" parent="." instance=ExtResource("2_u3k4h")]
position = Vector2(852, 175)

[node name="Enemy" parent="." instance=ExtResource("3_jrlup")]
position = Vector2(473, 270)
